# boids

./: Cargo.toml
src/: boid.rs  main.rs
