[package]
name = "boids"
version = "0.1.0"
authors = ["Luca Manolache <luca1230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0-rc1"
rand = "0.8.3"
glam = { version = "0.12", features = ["mint"]}
legion = "0.4.0"